Added API for entity access
